--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title> Best Chocolate Chip Cookies </title>
+  <script src="js/scripts.js"></script>
 </head>
 <body>
   <h1>Best Chocolate Chip Cookies</h1>
