It will add button to html.
Co-authored-by: Asia Kaplanyan <a.kaplanyan@gmail.com>

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Best Chocolate Chip Cookies</h1>
+ <button>Button</button>
   <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie" />
  
   <p>
@@ -39,7 +40,6 @@
     <li>Stir in chocolate chips, oatmeal and coconut.</li>
     <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
   </ol>
-
   <p>
     <a href="http://allrecipes.com">Click here</a> to check out my other great recipes.
   </p>
