It will add light/dark buttons to js.
Co-authored-by: Asia Kaplanyan <a.kaplanyan@gmail.com>

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <h1>Best Chocolate Chip Cookies</h1>
- <button>Button</button>
+  <br>
+ <button class="button-light">Button Light</button>
+ <button class="button-dark">Button Dark</button>
+ <br>
   <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie" />
  
   <p>
