It will add default/increased font size buttons to js.
Co-authored-by: Asia Kaplanyan <a.kaplanyan@gmail.com>

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -11,6 +11,10 @@
  <button class="button-light">Button Light</button>
  <button class="button-dark">Button Dark</button>
  <br>
+ <br>
+ <button class="button-default">Button Default Size</button>
+ <button class="button-increased">Button Increased Size</button>
+ <br>
   <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie" />
  
   <p>
