WIP: It will add mouseover/mouseout buttons to js.
Co-authored-by: Asia Kaplanyan <a.kaplanyan@gmail.com>

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -6,7 +6,7 @@
   <script src="js/scripts.js"></script>
 </head>
 <body>
-  <h1>Best Chocolate Chip Cookies</h1>
+  <h1 id="test">Best Chocolate Chip Cookies</h1>
   <br>
  <button class="button-light">Button Light</button>
  <button class="button-dark">Button Dark</button>
